--- a/src/style.css
+++ b/src/style.css
@@ -43,12 +43,20 @@ body {
 .samples {
   display: flex;
   flex-flow: row;
+  justify-content: center;
+  align-items: center;
   padding: 2rem;
   color: red;
   position: absolute;
   bottom: 0;
   right: 0;
   font-size: 3rem;
+  font-weight: bold;
+}
+
+.samples__select {
+  margin-left: 1rem;
+  padding: .5rem 1rem;
   font-weight: bold;
 }
 
